# Foggy-Navigator

./: .gitattributes  .gitignore  .tmp-codex-query-2.json  .tmp-codex-query.json  .tmp-codex-task-no-config.json  .tmp-codex-task.json  CLAUDE.md  CONFIG-SETUP.md  DELIVERY_PACKAGE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  README.md  README_CN.md  SECURITY-CONFIG-UPDATE.md  after-login.yaml  after-reply.yaml  dropdown.yaml  dropdown2.yaml  login.yaml  memory-adapter-layer-design.md  mvp-roadmap.md  observability-system-design.md  orchestration-layer-design.md  package.json  pnpm-lock.yaml  pom.xml  rag-module-design.md  requirements.md  start-all.sh  start-build-frontend.ps1  start-build-frontend.sh  start-frontend-build.sh  start-frontend.ps1  start-frontend.sh  start-launcher-mock.ps1  start-launcher.ps1  start-launcher.sh  stop-all.sh  stop-launcher.ps1  stop-launcher.sh  (+7 more)
docker/: .env.example  (+3 more)
tools/claude-agent-worker/: .env.example  SETUP.md  install-scheduled-task.ps1  pyproject.toml  run-scheduled-task.ps1  start-mac.sh  start.ps1  start.sh  stop.ps1  stop.sh  uninstall-scheduled-task.ps1  update.ps1  update.sh
tools/claude-agent-worker/src/agent_worker/: __init__.py  auth.py  config.py  main.py  models.py
tools/claude-agent-worker/src/claude_agent_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/claude-agent-worker/tests/: conftest.py  test_models.py  test_path_validation.py
tools/claude-agent-worker/tests/claude/: test_event_mapper.py  test_process_detection.py  test_sdk_wrapper.py  test_session_scanner.py
tools/claude-agent-worker/tests/e2e/: conftest.py  test_e2e_query.py  test_e2e_rewind.py
tools/claude-agent-worker/tests/fixtures/: aborted-session.jsonl  multi-turn-session.jsonl
tools/claude-agent-worker/tests/integration/: conftest.py  test_checkpoint_api.py  test_health_api.py  test_permission_api.py  test_query_api.py  test_sessions_api.py  test_subscribe_status.py
tools/foggy-monitor/: pyproject.toml
tools/langgraph-biz-worker/: .coverage  .env.example  README.md  pyproject.toml  restart-wsl-3161.ps1  start.ps1  stop.ps1
tools/langgraph-biz-worker/docs/: architecture.md  standalone.md
tools/langgraph-biz-worker/release/: install.ps1  install.sh  package.ps1  remote-install.ps1  remote-install.sh  upload.ps1
tools/langgraph-biz-worker/samples/: standalone_embedding.py  standalone_service.http  standalone_tools.py
tools/langgraph-biz-worker/scripts/: live_upstream_runtime_context_smoke.py  opt029_timeout_recovery_capture.py  real_llm_smoke_capture.py
tools/langgraph-biz-worker/tests/: conftest.py  test_account_context_files.py  test_account_context_route.py  test_account_file_tools.py  test_account_path_guard.py  test_account_skill_routing.py  test_account_workspace.py  test_artifact_context_governance.py  test_artifact_store.py  test_attachment_analysis.py  test_attachment_context.py  test_auth.py  test_business_function_tools.py  test_child_skill.py  test_command_tool.py  test_command_tool_e2e.py  test_config.py  test_context_isolation.py  test_context_memory.py  test_e2e_scripted_tool_call_streaming.py  test_e2e_smoke.py  test_error_paths.py  test_execution_policy.py  test_file_frame_journal.py  test_frame_execution_report.py  test_frame_interruption.py  test_frame_lifecycle.py  test_frame_report_route.py  test_frame_store.py  test_fsscript_bridge.py  test_graph_edges.py  test_health.py  test_live_upstream_runtime_context_smoke.py  test_llm_call_guard.py  test_llm_message_builder.py  test_llm_skill_agent.py  test_llm_skill_router.py  test_llm_submission_log.py  test_llm_tool_dispatcher.py  test_llm_tool_schemas.py  (+25 more)
tools/mock-llm-service/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.ps1  start.sh  stop.ps1  stop.sh  test-delegate-stream.json  test-delegate.json
tools/mock-llm-service/responses/: default.yaml
tools/mock-llm-service/tests/: __init__.py  test_anthropic_api.py  test_openai_api.py  test_strategies.py
(+2665 files in other folders)
