[project]
name = "claude-agent-worker"
version = "0.1.0"
description = "Claude Code Agent Worker for Foggy Navigator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.0.0",
    "claude-code-sdk>=0.1.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
