[project]
name = "claude-agent-worker"
version = "0.1.0"
description = "Claude Code Agent Worker for Foggy Navigator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.0.0",
    "claude-agent-sdk>=0.1.37",
    "sse-starlette>=2.0.0",
    "asyncssh>=2.13.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_worker"]
